--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -29,7 +29,8 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">    
     <head>
-        <css src="Bss_Quickview::css/jquery.fancybox.css" />
+        <!-- <css src="Bss_Quickview::css/jquery.fancybox.css" /> -->
+        <css src="Bss_Quickview::css/magnific-popup.css" />
     </head>
     <body>
         <referenceContainer name="before.body.end">
