--- a/view/frontend/templates/config.phtml
+++ b/view/frontend/templates/config.phtml
@@ -53,7 +53,7 @@ $isEnabled = $helper->enabled();
         left: 0;
         right: 0;
         }
-    .widget .products-grid .product-item .product-item-info:hover .bss-quickview{
+    .product-item .product-item-info:hover .bss-quickview{
         display: block !important;
         position: absolute !important;
         bottom: 0px !important;
@@ -67,7 +67,7 @@ $isEnabled = $helper->enabled();
         text-decoration: none !important;
     }
 
-    .page-products .products-grid .product-item .product-item-info:hover .bss-quickview{
+    .product-item .product-item-info:hover .bss-quickview{
         display: block !important;
         position: absolute !important;
         bottom: 0px !important;
