--- a/view/frontend/web/css/magnific-popup.css
+++ b/view/frontend/web/css/magnific-popup.css
@@ -30,15 +30,6 @@
   padding: 0 8px;
   box-sizing: border-box; }
 
-body.bss-quickview-catalog-product-view::-webkit-scrollbar{
-    width: 0px;
-    height: 0px;
-}
-body.bss-quickview-catalog-product-view {
-  -ms-overflow-style: none;
-  overflow: -moz-scrollbars-hidden;
-  padding: 10px;
-}
 .mfp-container:before {
   content: '';
   display: inline-block;
@@ -230,7 +221,7 @@ button::-moz-focus-inner {
   padding-bottom: 40px; }
   .mfp-iframe-holder .mfp-content {
     line-height: 0;
-    width: 100%;
+    width: 200px;
     max-width: 900px; }
   .mfp-iframe-holder .mfp-close {
     top: -40px; }
@@ -239,7 +230,7 @@ button::-moz-focus-inner {
   width: 100%;
   height: 0;
   overflow: hidden;
-  padding-top: 56.25%; }
+  padding-top: 64.25%; }
   .mfp-iframe-scaler iframe {
     position: absolute;
     display: block;
@@ -248,6 +239,7 @@ button::-moz-focus-inner {
     width: 100%;
     height: 100%;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    opacity: 0;
     background: #000; }
 
 /* Main image in popup */
@@ -358,3 +350,27 @@ img.mfp-img {
   .mfp-container {
     padding-left: 6px;
     padding-right: 6px; } }
+
+
+.mfp-preloader {
+  width: 30px;
+  height: 30px;
+  background-color: #FFF;
+  opacity: 0.65;
+  margin: 0 auto;
+  -webkit-animation: rotateplane 1.2s infinite ease-in-out;
+  animation: rotateplane 1.2s infinite ease-in-out;
+  z-index: 99999;
+}
+
+@-webkit-keyframes rotateplane {
+  0% { -webkit-transform: perspective(120px) }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+
+@keyframes rotateplane {
+  0% { transform: perspective(120px) rotateX(0deg) rotateY(0deg) }
+  50% { transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) }
+  100% { transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg) }
+}
