Fix bug hien thi Upsell

--- a/view/frontend/templates/config.phtml
+++ b/view/frontend/templates/config.phtml
@@ -84,6 +84,7 @@ $productImageWrapper = $helper->getProductImageWrapper();
     }
     .product-item .bss-quickview {display: none !important}
     #shopping-cart-table .bss-quickview {display: none !important}
+    .products-related .product-item-info:hover .bss-quickview, .products-upsell .product-item-info:hover .bss-quickview {display: none !important}
 </style>
 <script type="text/x-magento-init">
     {
