--- a/view/frontend/templates/config.phtml
+++ b/view/frontend/templates/config.phtml
@@ -15,9 +15,15 @@
  * @copyright  Copyright (c) 2019-2020 BSS Commerce Co. ( http://bsscommerce.com )
  * @license    http://bsscommerce.com/Bss-Commerce-License.txt
  */
+// @codingStandardsIgnoreFile
 ?>
 <?php
-$helper = $this->helper('Bss\Quickview\Helper\Data');
+/**
+ * @var \Bss\Quickview\Block\Initialize $block
+ */
+?>
+<?php
+$helper = $block->getHelper();
 $btnTextColor = $helper->getBtnTextColor();
 $baseUrl = $helper->getBaseUrl();
 $buttonText = $helper->getButtonText();
