--- a/view/frontend/templates/gotoproduct.phtml
+++ b/view/frontend/templates/gotoproduct.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  * BSS Commerce Co.
  *
@@ -14,6 +14,12 @@
  * @author     Extension Team
  * @copyright  Copyright (c) 2019-2020 BSS Commerce Co. ( http://bsscommerce.com )
  * @license    http://bsscommerce.com/Bss-Commerce-License.txt
+ */
+// @codingStandardsIgnoreFile
+?>
+<?php
+/**
+ * @var Magento\Catalog\Block\Product\View\Type\Simple $block
  */
 ?>
 <?php $product = $block->getProduct();
