--- a/view/frontend/templates/product/view/addtocart.phtml
+++ b/view/frontend/templates/product/view/addtocart.phtml
@@ -15,7 +15,12 @@
  * @copyright  Copyright (c) 2019-2020 BSS Commerce Co. ( http://bsscommerce.com )
  * @license    http://bsscommerce.com/Bss-Commerce-License.txt
  */
-/** @var $block \Bss\Quickview\Block\Product\View */
+// @codingStandardsIgnoreFile
+?>
+<?php
+/**
+ * @var \Bss\Quickview\Block\Product\View $block
+ */
 ?>
 <?php $_product = $block->getProduct(); ?>
 <?php $buttonTitle = __('Add to Cart'); ?>
