--- a/view/frontend/templates/product_info.phtml
+++ b/view/frontend/templates/product_info.phtml
@@ -15,5 +15,11 @@
  * @copyright  Copyright (c) 2019-2020 BSS Commerce Co. ( http://bsscommerce.com )
  * @license    http://bsscommerce.com/Bss-Commerce-License.txt
  */
+// @codingStandardsIgnoreFile
+?>
+<?php
+/**
+ * @var Magento\Framework\View\Element\Template $block
+ */
 ?>
 <div class="product info detailed"></div>
